# dreamerv3-multi-agent-grid-traffic

./: .gitignore  README.md  pyproject.toml
notebooks/: grid_traffic_baselines_exploration.ipynb
src/grid_traffic/: __init__.py  cli.py
src/grid_traffic/algorithms/: __init__.py
src/grid_traffic/algorithms/baselines/: __init__.py  dqn.py  mcts.py  ppo.py  tabular_q.py
src/grid_traffic/algorithms/dreamer/: __init__.py  agent.py  config.py
src/grid_traffic/envs/: __init__.py  config.py  grid_traffic.py
src/grid_traffic/pipeline/: __init__.py  evaluation.py  training.py
tests/: test_agents.py  test_env.py
